cmake_minimum_required(VERSION 3.1)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
  "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
PROJECT(hse_demo)
include(CheckIncludeFiles)
include(CheckCXXSourceCompiles)
find_package(PkgConfig)
set(CMAKE_VERBOSE_MAKEFILE OFF)
find_package(Boost 1.65.0 COMPONENTS program_options system REQUIRED )
find_package(Threads REQUIRED)
find_package(Mpool REQUIRED)
find_package(HSE REQUIRED)
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/include ${Boost_INCLUDE_DIRS} )
set(CMAKE_CXX_FLAGS_DEBUG "-g -std=c++2a -Wall -Wextra -Werror")
set(CMAKE_C_FLAGS_DEBUG "-g -Wall -Wextra -Werror")
set(CMAKE_CXX_FLAGS_RELEASE "-march=native -O2 -std=c++2a -Wall -Wextra -Werror")
set(CMAKE_C_FLAGS_RELEASE "-march=native -O2 -Wall -Wextra -Werror")
subdirs( src )

